[feat-97] Fixed bug where [Question] answer button text was overflowing, also fixed [LevelUp] button styling (#40)

--- a/public/style.css
+++ b/public/style.css
@@ -149,14 +149,23 @@ body {
 
 .question .answers {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: flex-start;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .question .answers .button {
-  min-width:45%;
+  background-color: #f66;
+  font: normal 1em OpenDyslexicAlta-Regular;
+  color:#ff9;
+  border:none;
   margin: 10px;
+  white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word; 
+  height:auto;
+  min-width:100%;
+  /* overflow:hidden; */
 }
 
 .button {
@@ -164,6 +173,11 @@ body {
     font: normal 1em OpenDyslexicAlta-Regular;
     color:#ff9;
     border:none;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word; 
+    height:auto;
+    /* overflow:hidden; */
 }
 
 .button:hover {
@@ -203,4 +217,17 @@ body {
   align-items:center;
   width:50%;
   margin:0 auto;
+}
+
+.levelUp .button {
+  background-color: #f66;
+  font: normal 1em OpenDyslexicAlta-Regular;
+  color:#ff9;
+  border:none;
+  margin: 10px;
+  white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word; 
+  height:auto;
+  min-width:100%;
 }
